# kap

./: README.md  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
examples/: test_assignment.py
kap/: __init__.py  _types.py  assignment.py
