[metadata]
name = kap
description = Gabrovšek's Multiple Hungarian method for solving k-Assignment Problem.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/kap
download_urls = https://pypi.org/project/kap
project_urls =
    Source = https://github.com/inspiros/kap
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
keywords = k-assignment, k-partite-matching, linear-assignment, bi-partite-matching, hungarian

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
setup_requires = numpy
install_requires = numpy

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    resources*
    tests*
